--- a/.config.ini
+++ b/.config.ini
@@ -1,4 +1,5 @@
 [USERINFO]
-email = patient.cc.team14@gmail.com
-password = P@tient4teen
+username = lmatsabu
+email = lmatsabu@student.wethinkcode.co.za
+password = toto
 
