added 2 unit tests aswell as fixed view booked

--- a/.config.ini
+++ b/.config.ini
@@ -1,5 +1,5 @@
 [USERINFO]
-username = lmatsabu
-email = lmatsabu@student.wethinkcode.co.za
-password = toto
+username = ltemplem
+email = ltemplem@student.wethinkcode.co.za
+password = u
 
