Unittest for delete completed

--- a/.config.ini
+++ b/.config.ini
@@ -1,5 +1,5 @@
 [USERINFO]
-username = ltemplem
-email = ltemplem@student.wethinkcode.co.za
-password = u
+username = lmatsabu
+email = lmatsabu@student.wethinkcode.co.za
+password = toto
 
