test_delete and config corrrections

--- a/.config.ini
+++ b/.config.ini
@@ -1,5 +1,5 @@
 [USERINFO]
-username = lmatsabu
-email = lmatsabu@student.wethinkcode.co.za
-password = toto
+username = tom
+email = tom@student.wethinkcode.co.za
+password = Harry
 
