--- a/.config.ini
+++ b/.config.ini
@@ -1,5 +1,5 @@
 [USERINFO]
-username = lmatsabu
-email = lmatsabu@student.wethinkcode.co.za
-password = toto
+username = Dick
+email = Dick@student.wethinkcode.co.za
+password = Harry
 
