--- a/.config.ini
+++ b/.config.ini
@@ -1,5 +1,5 @@
 [USERINFO]
-username = tom
-email = tom@student.wethinkcode.co.za
-password = Harry
+username = lmatsabu
+email = lmatsabu@student.wethinkcode.co.za
+name = Kamohelo
 
