--- a/.config.ini
+++ b/.config.ini
@@ -1,10 +1,5 @@
 [USERINFO]
-<<<<<<< HEAD
-username = Dick
-email = Dick@student.wethinkcode.co.za
-=======
-username = tom
-email = tom@student.wethinkcode.co.za
->>>>>>> 58296e68064f29cde631b48364b8382f56528979
+username = Flo
+email = fweni@student.wethinkcode.co.za
 password = Harry
 
