Fixed the error with the cancel option

--- a/.config.ini
+++ b/.config.ini
@@ -1,5 +1,5 @@
 [USERINFO]
-username = tom
-email = tom@student.wethinkcode.co.za
-password = Harry
+username = ikalonji
+email = ikalonji@student.wethinkcode.co.za
+password = abc
 
